<resources>
    <string name="app_name">FebTestProject</string>
    <string name="loading">Loading…</string>
    <string name="done">100%</string>
    <string name="lottie_animation">Lottie Animation</string>
    <string name="start_animation">Start Animation</string>
    <string name="stop_animation">Stop Animation</string>
    <string name="hide_show_animation">Hide / Show Animation</string>
    <string name="show_custom_alert">Show custom alert</string>
    <string name="close">Close</string>
    <string name="custom_alert">Custom Alert</string>
    <string name="random_value">Random value</string>
    <string name="random_value_2">Random value 2</string>
    <string name="go_to_second_screen">Go to second screen</string>
    <string name="randomize_values">Randomize values</string>
    <string name="_1">1</string>
    <string name="_00">00</string>
    <string name="_0">0</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="load_data_from_server">Load Data from server…</string>
    <string name="ratings">Ratings</string>
    <string name="text">Text</string>
    <string name="null_per">0%</string>
    <string name="try_again">Load failed. Trying again…</string>
    <string name="finished">Load finished</string>
    <string name="time_end">00</string>
    <string name="no_reviews_yet">No reviews yet</string>
    <string name="fist">Fist</string>
    <string name="secont">Secont</string>
    <string name="third">Third</string>
    <string name="fourth">Fourth</string>
</resources>
