<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_back"
    android:paddingHorizontal="24dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/tv_loading"
        style="@style/ProgressTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/loading"
        app:layout_constraintEnd_toStartOf="@+id/tv_progress"
        app:layout_constraintStart_toStartOf="@+id/pb_loading"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/pb_loading"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:progressDrawable="@drawable/progress_drawable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_loading" />

    <TextView
        android:id="@+id/tv_progress"
        style="@style/ProgressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/done"
        app:layout_constraintBottom_toTopOf="@+id/pb_loading"
        app:layout_constraintEnd_toEndOf="@+id/pb_loading" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/ProgressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/lottie_animation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pb_loading" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/anim_lottie"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="@id/btn_hide"
        app:layout_constraintEnd_toStartOf="@id/btn_start"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toTopOf="@id/btn_start"
        app:lottie_autoPlay="false"
        app:lottie_fileName="anim/animation.json" />

    <Button
        android:id="@+id/btn_start"
        style="@style/Button.Lottie"
        android:layout_height="wrap_content"
        android:text="@string/start_animation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <Button
        android:id="@+id/btn_stop"
        style="@style/Button.Lottie"
        android:layout_height="wrap_content"
        android:text="@string/stop_animation"
        app:layout_constraintEnd_toEndOf="@+id/btn_start"
        app:layout_constraintStart_toStartOf="@+id/btn_start"
        app:layout_constraintTop_toBottomOf="@+id/btn_start" />

    <Button
        android:id="@+id/btn_hide"
        style="@style/Button.Lottie"
        android:text="@string/hide_show_animation"
        app:layout_constraintEnd_toEndOf="@+id/btn_stop"
        app:layout_constraintStart_toStartOf="@+id/btn_stop"
        app:layout_constraintTop_toBottomOf="@+id/btn_stop" />

    <Button
        android:id="@+id/btn_alert"
        style="@style/Button.Big"
        android:layout_marginTop="50dp"
        android:text="@string/show_custom_alert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_hide" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_alert">

        <Button
            android:id="@+id/btn_navigate"
            style="@style/Button.Big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/go_to_second_screen" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
